[package]
name = "jose4rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-lc-sys = { version = "0", optional = true }
base64 = { version = "0", optional = true }
base64-simd = { version = "0", optional = true }
boring-sys = { version = "4", optional = true }
simd-json = { version = "0", default-features = false, features = [
    "runtime-detection",
] }
thiserror = "2"

[features]
default = ["aws-lc", "base64-simd"]

aws-lc = ["aws-lc-sys"]
boring = ["boring-sys"]
